# flower-turing-machine

./: .gitignore  CMakeLists.txt  README.md  instructions.txt  main.cpp
include/: turing_machine.h
src/: turing_machine.cpp
